# gpt-pet-v2

./: .gitignore  .gitmodules  README.md  fan.csv  higher_spin.csv  rtab.html  rviz2_config.rviz  spinning_wheel.csv  still.csv  top_spin.csv
embedded/arduino_driver/: arduino_driver.ino
embedded/dummy/: dummy.ino
gptpet_hardware/: CMakeLists.txt
gptpet_hardware/src/: mecanumbot_hardware.cpp
ros2_ws/src/bot_ws/src/gptpet_hardware/: CMakeLists.txt  gptpet_hardware.xml  mecanumbot_hardware.xml  package.xml  plugin_description.xml  plugins.xml
ros2_ws/src/bot_ws/src/gptpet_hardware/include/gptpet_hardware/: gptpet_hardware.hpp  mecanumbot_hardware.hpp
ros2_ws/src/bot_ws/src/gptpet_hardware/src/: gptpet_hardware.cpp
ros2_ws/src/bot_ws/src/proximity-sensors/: setup.py
ros2_ws/src/bot_ws/src/startup/: CMakeLists.txt  generate_urdf.py  package.xml  setup.py
ros2_ws/src/bot_ws/src/startup/config/: controllers.yaml  qos_overrides.yaml
ros2_ws/src/bot_ws/src/startup/launch/: client.launch.py  nav2.launch.py  pointcloud.launch.py  showimage.launch.py
ros2_ws/src/bot_ws/src/startup/src/: magnetometer_converter.cpp
ros2_ws/src/bot_ws/src/startup/urdf/: gptpet.urdf  gptpet.xacro
ros2_ws/src/bot_ws/src/startup_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/bot_ws/src/startup_cpp/config/: absolute_controllers.yaml  basic_controllers.yaml  controller_config.yaml  controllers.yaml  controllers_simplified.yaml  direct_params.yaml  flat_controllers.yaml  minimal_controllers.yaml
ros2_ws/src/bot_ws/src/startup_cpp/launch/: client.launch.py  direct_params.launch.py  flat_params.launch.py  minimal.launch.py  nav2.launch.py  yaml_params.launch.py
ros2_ws/src/bot_ws/src/startup_cpp/other_launches/: absolute_params.launch.py  simplified.launch.py
ros2_ws/src/bot_ws/src/startup_cpp/urdf/: gptpet.xacro
ros2_ws/src/common/log/: latest_build
ros2_ws/src/common/src/common_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/common/src/common_interfaces/srv/: MotorControl.srv
ros2_ws/src/common/src/gptpet_common/: CMakeLists.txt
ros2_ws/src/common/src/gptpet_common/msg/: Velocities.msg
ros2_ws/src/common/src/gptpet_common/srv/: MotorSpeed.srv
ros2_ws/src/common_ws/src/gptpet_common/: package.xml
ros2_ws/src/common_ws/src/gptpet_common/srv/: MotorControl.srv
ros2_ws/src/log/: latest_build
ros2_ws/src/real_ws/cc_internals/aarch64-ubuntu-humble/: defaults.yaml
ros2_ws/src/real_ws/cc_internals/metrics/: 1739290721.json  1739290750.json
ros2_ws/src/real_ws/install/: local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ros2_ws/src/real_ws/install/kinect_ros2/share/kinect_ros2/: package.bash  package.zsh
ros2_ws/src/real_ws/install/proximity-sensors/share/proximity-sensors/: package.bash  package.ps1  package.sh  package.xml
ros2_ws/src/real_ws/log/: latest_build
ros2_ws/src/real_ws/src/gptpet_hardware/: package.xml
ros2_ws/src/real_ws/src/gptpet_hardware/src/: mecanumbot_hardware.cpp
ros2_ws/src/real_ws/src/install/: local_setup.bash  local_setup.ps1  local_setup.sh  setup.ps1  setup.sh
ros2_ws/src/real_ws/src/install/kinect_ros2/share/ament_index/resource_index/parent_prefix_path/: kinect_ros2
ros2_ws/src/real_ws/src/install/kinect_ros2/share/ament_index/resource_index/rclcpp_components/: kinect_ros2
ros2_ws/src/real_ws/src/install/kinect_ros2/share/kinect_ros2/: local_setup.sh  package.dsv  package.ps1  package.sh
ros2_ws/src/real_ws/src/install/proximity-sensors/share/proximity-sensors/: package.dsv  package.sh  package.zsh
ros2_ws/src/real_ws/src/install/startup/share/startup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/src/real_ws/src/log/: latest_build
ros2_ws/src/real_ws/src/motors/: package.xml  setup.py
ros2_ws/src/real_ws/src/motors/motors/: motor_control.py  motor_speed_publisher.py
ros2_ws/src/real_ws/src/proximity-sensors/: setup.cfg
ros2_ws/src/real_ws/src/startup/: package.xml  setup.cfg  setup.py
ros2_ws/src/real_ws/src/startup/config/: controllers.yaml
ros2_ws/src/real_ws/src/startup/launch/: client.launch.py
ros2_ws/src/server/.cargo/: config.toml
ros2_ws/src/server/log/: latest_build
ros2_ws/src/server/src/gptpet_navigation/: package.xml  setup.cfg  setup.py
ros2_ws/src/server/src/gptpet_navigation/config/: controllers.yaml
ros2_ws/src/server/src/gptpet_navigation/launch/: kinect_depth.launch.py  nav2.launch.py
ros2_ws/src/server/src/gptpet_navigation/urdf/: bot.urdf  gptpet.xacro
ros2_ws/src/server/src/startup/: CMakeLists.txt  package.xml
ros2_ws/src/server/src/startup/config/: controllers.yaml
ros2_ws/src/server/src/startup/launch/: control.launch.py  nav2.launch.py
ros2_ws/src/server/src/startup/urdf/: gptpet.xacro
ros2_ws/src/server/urdf/: bot.urdf
ros2_ws/src/server_ws/src/.cargo/: config.toml
ros2_ws/src/server_ws/src/startup/: CMakeLists.txt  package.xml
ros2_ws/src/server_ws/src/startup/config/: slam_toolbox_parameters.yaml
ros2_ws/src/server_ws/src/startup/launch/: kinect_depth.launch.py  nav2.launch.py  rgbd.launch.py
ros2_ws/src/server_ws/src/startup/src/: imu_fusion.cpp
ros2_ws/src/server_ws/src/startup/urdf/: gptpet.xacro
scratch/: imu_testing.py
src/: demo_runner.py  habitat-testing.py  requirements.txt  settings.py
src/data/scene_datasets/: habitat-test-scenes
