<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gptpet_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pj@todo.todo">pj</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Build and Exec dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_python</build_depend>

  <!-- Nav2 packages (example: bringup, map_server, etc.) -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_recoveries</exec_depend>
  <exec_depend>nav2_behavior_tree</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
